replace all byte array to string